# blob-consumption-playground

./: .gitignore  CMakeLists.txt  README.md  analyser.py  async_futures_concurrency-1.cpp  main-async.cpp  main-cv.cpp  main-pool.cpp  tester.sh  utils.cpp  utils.h
data-ammiraglia/: results.txt
data-stampede/: results.txt
